--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width" 
+    <meta name="viewport" content="width=device-width"
     <title>Barbería Alura</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-
+    
     <header>
         <div class="caja">
             <h1><img src="imagenes/logo.png"></h1>
@@ -43,6 +43,8 @@
             <p>Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de
                 mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y
                 conquista nuevos clientes diariamente.</p>
+
+                <p>haciendo cambios para pruebas de git</p>
 
             <p id="mision"><em>Nuestra misión es: <strong>"Proporcionar autoestima y calidad de vida a nuestros
                         clientes"</strong>.</em></p>
